syntax = "proto3";

package user;

option go_package = "github.com/rishu/microservice/gen/api/user";

message Post {
  string user_id = 1;
  string id = 2;
  string title = 3;
  string body = 4;
}